--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,7 @@ setenv =
   LANGUAGE=en_US
   LC_ALL=en_US.utf-8
 deps =
-  -c{env:TOX_CONSTRAINTS_FILE:https://releases.openstack.org/constraints/upper/zed}
+  -c{toxinidir}/upper-constraints.411
   -r{toxinidir}/requirements.txt
   -r{toxinidir}/test-requirements.txt
 commands = stestr run {posargs}
@@ -78,7 +78,7 @@ setenv = PYTHONHASHSEED=0
 sitepackages = False
 # NOTE(dtantsur): documentation building process requires importing IPA
 deps =
-  -c{env:TOX_CONSTRAINTS_FILE:https://releases.openstack.org/constraints/upper/zed}
+  -c{toxinidir}/upper-constraints.411
   -r{toxinidir}/requirements.txt
   -r{toxinidir}/doc/requirements.txt
 commands =
@@ -96,7 +96,7 @@ commands =
 [testenv:releasenotes]
 usedevelop = False
 deps =
-  -c{env:TOX_CONSTRAINTS_FILE:https://releases.openstack.org/constraints/upper/zed}
+  -c{toxinidir}/upper-constraints.411
   -r{toxinidir}/doc/requirements.txt
 commands = sphinx-build -a -E -W -d releasenotes/build/doctrees -b html releasenotes/source releasenotes/build/html
 
@@ -135,7 +135,7 @@ commands =
 [testenv:bandit]
 usedevelop = False
 deps =
-  -c{env:TOX_CONSTRAINTS_FILE:https://releases.openstack.org/constraints/upper/zed}
+  -c{toxinidir}/upper-constraints.411
   -r{toxinidir}/test-requirements.txt
 commands = bandit -r ironic_python_agent -x tests -n5 -ll -c tools/bandit.yml
 
@@ -144,9 +144,3 @@ commands =
   pip install -e {toxinidir}/examples/business-logic
   pip install -e {toxinidir}/examples/vendor-device
   python -c 'import example_business_logic; import example_device'
-
-[testenv:lower-constraints]
-deps =
-  -c{toxinidir}/lower-constraints.txt
-  -r{toxinidir}/test-requirements.txt
-  -r{toxinidir}/requirements.txt
