Use yoga constraints
We still support python 3.6 at this point so let's use yoga
upper-constraints that are still compatible with it

--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,7 @@ setenv =
   LANGUAGE=en_US
   LC_ALL=en_US.utf-8
 deps =
-  -c{toxinidir}/upper-constraints.411
+  -c{env:TOX_CONSTRAINTS_FILE:https://releases.openstack.org/constraints/upper/yoga}
   -r{toxinidir}/requirements.txt
   -r{toxinidir}/test-requirements.txt
 commands = stestr run {posargs}
@@ -96,7 +96,7 @@ commands =
 [testenv:releasenotes]
 usedevelop = False
 deps =
-  -c{toxinidir}/upper-constraints.411
+  -c{env:TOX_CONSTRAINTS_FILE:https://releases.openstack.org/constraints/upper/yoga}
   -r{toxinidir}/doc/requirements.txt
 commands = sphinx-build -a -E -W -d releasenotes/build/doctrees -b html releasenotes/source releasenotes/build/html
 
@@ -135,7 +135,7 @@ commands =
 [testenv:bandit]
 usedevelop = False
 deps =
-  -c{toxinidir}/upper-constraints.411
+  -c{env:TOX_CONSTRAINTS_FILE:https://releases.openstack.org/constraints/upper/yoga}
   -r{toxinidir}/test-requirements.txt
 commands = bandit -r ironic_python_agent -x tests -n5 -ll -c tools/bandit.yml
 
@@ -144,3 +144,9 @@ commands =
   pip install -e {toxinidir}/examples/business-logic
   pip install -e {toxinidir}/examples/vendor-device
   python -c 'import example_business_logic; import example_device'
+
+[testenv:lower-constraints]
+deps =
+  -c{toxinidir}/lower-constraints.txt
+  -r{toxinidir}/test-requirements.txt
+  -r{toxinidir}/requirements.txt
