Fix Bandit errors
Bandit 1.7.5 released with a timeout check for all requests and
urllib calls.

Fixed those.

In the process, then exposed a bandit b310 issue, which was already
covered by the code, but explicitly marked it as such.

Also, enables bandit checks to be voting for CI..

This is a parcial cherry-pick
Conflicts
both modified:   ironic_python_agent/config.py
* MD5 config wasn't necessary since it was introduced as a feature.
both modified:   ironic_python_agent/extensions/standby.py
* Keep the old logic instead of the one added in the MD5 changes.
deleted by us:   ironic_python_agent/hardware_managers/nvidia/nvidia_fw_update.py
* Nvidia was added as a feature and we don't need it.

Change-Id: If0e87790191f5f3648366d571e1d85dd7393a548

--- a/zuul.d/project.yaml
+++ b/zuul.d/project.yaml
@@ -9,6 +9,7 @@
     check:
       jobs:
         - openstack-tox-functional
+        - ipa-tox-bandit
         - ipa-tox-examples
         # NOTE(iurygregory) Only run this two jobs since we are testing
         # wholedisk + partition on tempest
@@ -26,11 +27,10 @@
         # Non-voting jobs
         - ipa-tempest-ironic-inspector-src:
             voting: false
-        - ipa-tox-bandit:
-            voting: false
     gate:
       jobs:
         - openstack-tox-functional
+        - ipa-tox-bandit
         - ipa-tox-examples
         - ipa-tempest-bios-ipmi-direct-src
         - ipa-tempest-uefi-redfish-vmedia-src
