Call evaluate_hardware_support exactly once per hwm
Fixes an issue where we could call evaluate_hardware_support multiple
times each run. Now, instead, we cache the values and use the cache
where needed.

Adds unit test coverage for get_managers and the new method.
Fixes issue where we were caching hardware managers between unit tests.

Also includes fixes for codespell CI:
- skip build files in repo
- fix spelling issues introduced to repo

Closes-bug: 2066308
Change-Id: Iebc5b6d2440bfc9f23daa322493379bbe69e84d0

--- a/setup.cfg
+++ b/setup.cfg
@@ -70,3 +70,4 @@ quiet-level = 4
 # Words to ignore:
 # cna: Intel CNA card
 ignore-words-list = cna
+skip = ./releasenotes/build,./venv,./doc/build
